[package]
name = "dur"
version = "0.2.1"
edition = "2021"
authors = ["Taylan Gökkaya<insomnimus@proton.me>"]
description = "Duration parser and formatter for humans"
readme = "readme.md"
homepage = "https://github.com/insomnimus/dur"
repository = "https://github.com/insomnimus/dur"
license-file = "LICENSE"
keywords = ["duration", "human", "pretty-print", "format", "time"]
categories = ["date-and-time", "no-std", "parser-implementations", "text-processing", "value-formatting"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
std = []
clap = ["std", "clap/std", "clap/error-context"]

[dependencies]
clap = { version = "4.4.6", optional = true, default-features = false }
nom = "7.1.3"
rust_decimal = { version = "1.32.0", default-features = false, features = ["std"] }
