[package]
name = "dur"
version = "0.4.0"
edition = "2021"
authors = ["Taylan Gökkaya<insomnimus@proton.me>"]
description = "Duration parser and formatter for humans"
readme = "readme.md"
homepage = "https://github.com/insomnimus/dur"
repository = "https://github.com/insomnimus/dur"
license-file = "LICENSE"
keywords = ["duration", "human", "pretty-print", "format", "time"]
categories = ["date-and-time", "no-std", "parser-implementations", "text-processing", "value-formatting"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
# Makes `Error` implement the `std::error::Error` trait. (Automatically enables the `alloc` feature).
std = ["alloc"]
# Enables slightly better error messages by adding the offending string to variant `Error::InvalidUnit`
alloc = []
# Enables using Duration directly as an argument in clap.
clap = ["std", "clap/std", "clap/error-context"]
# Enables Duration de/serialization through serde.
serde = ["alloc", "serde/alloc"]

[dependencies]
clap = { version = "4.4.6", optional = true, default-features = false }
nom = { version = "7.1.3", default-features = false }
rust_decimal = { version = "1.32.0", default-features = false, features = ["std"] }
serde = { version = "1.0.189", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.107"
